# FileUploderTest

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  example.env  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
picasso/: celeryapp.py  settings.py  urls.py
picasso/apps/file/: __init__.py  admin.py  apps.py  tasks.py  tests.py  urls.py  views.py
picasso/apps/file/management/commands/: createadmin.py
picasso/apps/file/migrations/: 0001_initial.py
picasso/deploy/: config.env  initapp.sh
picasso/deploy/django/: Dockerfile
picasso/deploy/nginx/: Dockerfile  nginx.conf
